# Colbi

./: .gitignore  .gitmodules  CMakeLists.txt  Colbi.pro  Colbi_ru_RU.ts  GifWorker.cpp  JpgWorker.cpp  PngWorker.cpp  SvgWorker.js  build_modules.sh  main.cpp  main.h  main.qml  qml.qrc  themes.js
lib/: CMakeLists.txt
src/: Colbi.cpp  Colbi.hpp  GifWorker.cpp  JpgWorker.cpp  PngWorker.cpp  main.cpp
ts/: ru_RU.xml
